--- a/Homework18/Views/Home/Index.cshtml
+++ b/Homework18/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="main-wrapper">
     <h3>Список зaданий:</h3>
-    <a href="Animals">1. Фабрика животных</a>
+    <a href="Animals">1. Фабрика животных</a><br />
+    <a href="Books">2. Книжная библиотека</a>
 </div>
